# polybot

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: build-and-deploy.yml  publish.yml  test.yml
polybot/: __init__.py  bot.py  image.py  service.py
tests/: test_basic.py  test_image.py  test_mastodon.py  test_post.py
